[package]
name = "linksim"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
bevy_egui = "0.34.1"
generational-arena = "0.2.9"
glam = "0.30.3"
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
pest = "2.8.0"
pest_derive = "2.8.0"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag", 
    "Document",
    "Element",
    "HtmlAnchorElement",
    "Url",
    "Window",
    "console",
]}